syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/hour_entity.proto";

option java_outer_classname = "HourToMinuteService";

service HourToMinute {
  option (kalix.codegen) = {
    action: {}
  };

  rpc OnHourAggregationRequested(entity.HourAggregationRequested) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "hour"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "hour"
    };
  }
}
